# SpaceShooter

./: CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
res/font/: fonts.xml
res/gfx/: emitters.xml  enemies.xml  objects.xml  textures.xml
res/levels/: one.xml
res/sfx/: audio.xml
src/: Main.cpp
src/Animation/: Animation.h  CMakeLists.txt  SeqAnimation.cpp  SeqAnimation.h  SpriteAnimation.cpp  SpriteAnimation.h
src/AssetManager/: Audio.cpp  Audio.h  CMakeLists.txt
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h
src/Events/: CMakeLists.txt  Input.cpp  Input.h
src/Game/: CMakeLists.txt
src/Game/Character/: Airship.cpp  Airship.h  Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h
src/Game/Levels/: Level.h  LevelFactory.cpp  LevelFactory.h  LevelOne.cpp  LevelOne.h  LevelParser.h
src/Graphics/: CMakeLIsts.txt  Text.cpp  Text.h  Texture.cpp  Texture.h
src/Graphics/UserInterface/: Button.cpp  Button.h
src/Object/: CMakeLists.txt  GameObject.h  Object.h  ObjectFactory.cpp  ObjectFactory.h
src/ParticleSystem/: CMakeLists.txt  Emitter.cpp  Emitter.h  Particle.cpp  Particle.h  ParticlePool.cpp  ParticlePool.h  ParticleSystem.cpp  ParticleSystem.h
src/Physics/: CMakeLists.txt  RigidBody.h  Vector2D.cpp  Vector2D.h
src/Physics/Collision/: BoxCollider.h  CollisionHandler.cpp  CollisionHandler.h
src/States/: CMakeLists.txt  GameState.h  Menu.cpp  Menu.h  Pause.cpp  Pause.h  Play.cpp  Play.h
src/Timer/: CMakeLists.txt  PerfTimer.cpp  PerfTimer.h  Timer.cpp  Timer.h
