add_library(
    Game
    Character/Airship.cpp
    Character/Airship.h
    Character/Bullet.cpp
    Character/Bullet.h
    Character/Enemy.cpp
    Character/Enemy.h

    # Levels
    Levels/Level.h
    Levels/LevelFactory.cpp
    Levels/LevelFactory.h
    Levels/LevelParser.h
    Levels/LevelOne.cpp
    Levels/LevelOne.h
)
